update user balance
